log/build_2026-03-31_10-22-54/estimation/stderr.log
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Matrix3d estimation::LegKinematics::computeInertiaMatrix(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:8:21: error: ‘LegConstants’ is not a namespace-name
    8 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:10:17: error: ‘L_THIGH’ was not declared in this scope
   10 |     double l1 = L_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:11:17: error: ‘L_CALF’ was not declared in this scope; did you mean ‘LC_ALL’?
   11 |     double l2 = L_CALF;
      |                 ^~~~~~
      |                 LC_ALL
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:12:17: error: ‘M_THIGH’ was not declared in this scope
   12 |     double m1 = M_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:13:17: error: ‘M_CALF’ was not declared in this scope
   13 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:14:18: error: ‘THIGH_COM’ was not declared in this scope
   14 |     double l1c = THIGH_COM;  // 0.5 * L_THIGH
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:15:18: error: ‘CALF_COM’ was not declared in this scope
   15 |     double l2c = CALF_COM;    // 0.5 * L_CALF
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:20:20: error: ‘I_THIGH_XX’ was not declared in this scope
   20 |     double I1_xx = I_THIGH_XX;
      |                    ^~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:21:20: error: ‘I_THIGH_ZZ’ was not declared in this scope
   21 |     double I1_zz = I_THIGH_ZZ;
      |                    ^~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:22:20: error: ‘I_CALF_XX’ was not declared in this scope
   22 |     double I2_xx = I_CALF_XX;
      |                    ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:23:20: error: ‘I_CALF_ZZ’ was not declared in this scope
   23 |     double I2_zz = I_CALF_ZZ;
      |                    ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:10:12: warning: unused variable ‘l1’ [-Wunused-variable]
   10 |     double l1 = L_THIGH;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:11:12: warning: unused variable ‘l2’ [-Wunused-variable]
   11 |     double l2 = L_CALF;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:18:12: warning: unused variable ‘s12’ [-Wunused-variable]
   18 |     double s12 = std::sin(q(1) + q(2));  // sin(thigh + calf)
      |            ^~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeCoriolisTerm(const Vector3d&, const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:48:21: error: ‘LegConstants’ is not a namespace-name
   48 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:50:18: error: ‘THIGH_COM’ was not declared in this scope
   50 |     double l1c = THIGH_COM;
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:51:18: error: ‘CALF_COM’ was not declared in this scope
   51 |     double l2c = CALF_COM;
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:52:17: error: ‘M_CALF’ was not declared in this scope
   52 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:55:12: warning: unused variable ‘c2’ [-Wunused-variable]
   55 |     double c2 = std::cos(q(1));
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeGravityTerm(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:75:21: error: ‘LegConstants’ is not a namespace-name
   75 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:77:17: error: ‘M_THIGH’ was not declared in this scope
   77 |     double m1 = M_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:78:17: error: ‘M_CALF’ was not declared in this scope
   78 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:79:18: error: ‘THIGH_COM’ was not declared in this scope
   79 |     double l1c = THIGH_COM;
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:80:18: error: ‘CALF_COM’ was not declared in this scope
   80 |     double l2c = CALF_COM;
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:81:16: error: ‘G’ was not declared in this scope
   81 |     double g = G;
      |                ^
gmake[2]: *** [CMakeFiles/estimation_kinematics.dir/build.make:76：CMakeFiles/estimation_kinematics.dir/src/leg_kinematics.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:139：CMakeFiles/estimation_kinematics.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
